manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "nexucluster-f342"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "nexucluster-f342"
  template:
    metadata:
      labels:
        app: "nexucluster-f342"
    spec:
      containers:
        - name: "nexucluster-f342"
          image: "s6nexu.azurecr.io/nexucluster"
          ports:
          - containerPort: 4000
