manifests/deployment-2.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "comment-service"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "comment-service"
  template:
    metadata:
      labels:
        app: "comment-service"
    spec:
      containers:
        - name: "comment-service"
          image: "s6nexu.azurecr.io/comment-service"
          ports:
          - containerPort: 7000
