manifests/deployment-3.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "media-service"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "media-service"
  template:
    metadata:
      labels:
        app: "media-service"
    spec:
      containers:
        - name: "media-service"
          image: "s6nexu.azurecr.io/media-service"
          ports:
          - containerPort: 1000
