manifests/deployment-4.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "post-service"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "post-service"
  template:
    metadata:
      labels:
        app: "post-service"
    spec:
      containers:
        - name: "post-service"
          image: "s6nexu.azurecr.io/nexucluster"
          ports:
          - containerPort: 3000
