manifests/deployment-5.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "user-service"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "user-service"
  template:
    metadata:
      labels:
        app: "user-service"
    spec:
      containers:
        - name: "user-service"
          image: "s6nexu.azurecr.io/user-service"
          ports:
          - containerPort: 2000
