manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "api-gateway"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "api-gateway"
  template:
    metadata:
      labels:
        app: "api-gateway"
    spec:
      containers:
        - name: "api-gateway"
          image: "s6nexu.azurecr.io/nexucluster"
          ports:
          - containerPort: 5000
