manifests/post-service-db.yml
# service
#
# set up a service for the organization database.
# set the target port and port to the standard postgres port

apiVersion: v1
kind: Service
metadata:
 name: post-service-database
spec:
 selector:
  app: post-service-database
 ports:
  - port: 27008
    targetPort: 27017

---
# deployment
#
# set up a single pod with the postgres image.
# The credentials are passed through the environment variables.

apiVersion: apps/v1
kind: Deployment
metadata:
 name: post-service-database
spec:
 selector:
  matchLabels:
   app: post-service-database
 replicas: 1
 template:
  metadata:
   labels:
    app: post-service-database
  spec:
   containers:
    - name: post-service-database
      image: mongo:latest
