manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "nexucluster-f342"
    labels:
        app: "nexucluster-f342"
spec:
    type: ClusterIP
    ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
    selector:
        app: "nexucluster-f342"
