manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "nexucluster-24bb"
    labels:
        app: "nexucluster-24bb"
spec:
    type: ClusterIP
    ports:
    - port: 7000
      targetPort: 7000
      protocol: TCP
      name: http
    selector:
        app: "nexucluster-24bb"
