manifests/service-4.yml
apiVersion: v1
kind: Service
metadata:
    name: "post-service"
    labels:
        app: "post-service"
spec:
    type: ClusterIP
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "post-service"
