manifests/service-5.yml
apiVersion: v1
kind: Service
metadata:
    name: "nexucluster-5ac0"
    labels:
        app: "nexucluster-5ac0"
spec:
    type: ClusterIP
    ports:
    - port: 2000
      targetPort: 2000
      protocol: TCP
      name: http
    selector:
        app: "nexucluster-5ac0"
