manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "nexucluster-83ba"
    labels:
        app: "nexucluster-83ba"
spec:
    type: ClusterIP
    ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
    selector:
        app: "nexucluster-83ba"
