manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "nexucluster-f342"
    labels:
        app: "nexucluser-f342"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-nexucluster-f342.5521d5a114fc4eb38320.uksouth.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nexucluster-83ba
                  port:
                    number: 4000
