manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "nexucluster-24bb"
    labels:
        app: "nexucluster-24bb"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-nexucluster-24bb.5521d5a114fc4eb38320.uksouth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "nexucluster-24bb"
                servicePort: 7000
