manifests/ingress-3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "nexucluster-35d6"
    labels:
        app: "nexucluster-35d6"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-nexucluster-35d6.5521d5a114fc4eb38320.uksouth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "nexucluster-35d6"
                servicePort: 1000
