manifests/ingress-4.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "nexucluster-5bd5"
    labels:
        app: "nexucluster-5bd5"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-nexucluster-5bd5.5521d5a114fc4eb38320.uksouth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "nexucluster-5bd5"
                servicePort: 3000
