manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "api-gateway"
    labels:
        app: "api-gateway"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-api-gateway.5521d5a114fc4eb38320.uksouth.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: api-gateway
                  port:
                    number: 5000
